feat(api-core&frontend): add BYOM model registry service
Implement new api-core microservice for managing Bring Your Own Model (BYOM) registry with
model discovery, health monitoring, and inference proxy capabilities.

Key features:
- Model CRUD operations with SQLAlchemy + SQLite/async support
- Health check monitoring with configurable intervals
- Capability detection and validation for external models
- Redis caching layer for performance optimization
- SAM3 inference proxy for unified API interface
- Alembic migrations for schema management
- Layered architecture (Router→Service→Repository→Database)

Technical stack:
- FastAPI with async/await patterns
- SQLAlchemy 2.0 with aiosqlite
- Redis for caching
- Cryptography for sensitive data encryption
- Docker containerization with uv package manager

Web interface additions:
- ModelSelector component for BYOM dropdown
- ModelConfigPage for model registration UI
- AutoDetectPanel for capability-based detection
- useModelRegistry hook for model state management
- BYOM and inference API clients

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,42 @@ services:
               count: 1
               capabilities: [gpu]
 
+  # API Core - Model Registry Service
+  api-core:
+    build:
+      context: ./apps/api-core
+      dockerfile: Dockerfile
+    container_name: anu-api-core
+    ports:
+      - "8001:8001"
+    volumes:
+      - ./apps/api-core/src:/code/src
+      - api-core-data:/code/data
+    env_file:
+      - ./apps/api-core/.env
+    restart: unless-stopped
+    networks:
+      - anu-network
+    depends_on:
+      - redis
+
+  # Redis - Caching Layer
+  redis:
+    image: redis:7-alpine
+    container_name: anu-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    restart: unless-stopped
+    networks:
+      - anu-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
+
   # Frontend - React Annotation Platform
   frontend:
     build:
@@ -45,6 +81,7 @@ services:
       - ./apps/web/.env
     depends_on:
       - backend
+      - api-core
     networks:
       - anu-network
     command: npm run dev -- --host 0.0.0.0
@@ -65,6 +102,10 @@ services:
 
 volumes:
   huggingface_cache:
+    driver: local
+  api-core-data:
+    driver: local
+  redis-data:
     driver: local
 
 networks:
