--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,5 +1,6 @@
 # API Configuration
 VITE_API_URL=http://localhost:8000
+VITE_CORE_API_URL=http://localhost:8001
 
 # Environment
 VITE_ENV=development
