refactor(api-core): improve Docker setup and update dependencies
  - Update Dockerfile to use official uv Docker image and improved build
  caching
  - Fix SQLite database path to use absolute path in container
  (/app/data/byom.db)
  - Update CORS configuration to allow all origins for development
  - Add Redis URL configuration to Settings with proper Field definition
  - Remove redundant middleware for injecting state into requests
  - Update all Python dependencies to latest compatible versions
  - Standardize working directory to /app and use uv run for execution

--- a/apps/api-core/.env.example
+++ b/apps/api-core/.env.example
@@ -4,13 +4,13 @@ API_CORE_PORT=8001
 API_CORE_DEBUG=true
 
 # Database
-DATABASE_URL=sqlite:///data/byom.db
+DATABASE_URL=sqlite:////app/data/byom.db
 
 # Redis
 REDIS_URL=redis://redis:6379/0
 
 # CORS
-CORS_ORIGINS=["http://localhost:5173", "http://localhost:3000"]
+CORS_ORIGINS=["*"]
 
 # Logging
 LOG_LEVEL=INFO
