--- a/apps/api-core/Dockerfile
+++ b/apps/api-core/Dockerfile
@@ -1,31 +1,33 @@
 FROM python:3.12-slim
 
 # Set working directory
-WORKDIR /code
+WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Install uv
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
-ENV PATH="/root/.cargo/bin:$PATH"
+# Install uv package manager
+COPY --from=ghcr.io/astral-sh/uv:0.9.11 /uv /uvx /bin/
 
-# Copy dependency files
-COPY pyproject.toml ./
-
-# Install Python dependencies
-RUN uv pip install --system -e .
+# 5. Install dependencies
+# Using --frozen ensures we respect the lockfile
+RUN --mount=type=bind,source=uv.lock,target=uv.lock \
+    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+    uv sync --frozen --no-cache
 
 # Copy application code
-COPY ./src ./src
+COPY ./src /app/src
 
 # Create data directory for SQLite
-RUN mkdir -p /code/data
+RUN mkdir -p /app/data
+
+# Set environment variables
+ENV PYTHONPATH=/app/src
 
 # Expose port
 EXPOSE 8001
 
 # Command to run the application
-CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["uv", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8001"]
