feat(api-core): init auth, project, task, job, annotations

--- a/apps/api-core/.env.example
+++ b/apps/api-core/.env.example
@@ -3,8 +3,9 @@ API_CORE_HOST=0.0.0.0
 API_CORE_PORT=8001
 API_CORE_DEBUG=true
 
-# Database
-DATABASE_URL=sqlite:////app/data/byom.db
+# Database (PostgreSQL)
+DATABASE_URL=postgresql+asyncpg://annotateanu:annotateanu_dev@postgres:5432/annotateanu
+DATABASE_URL_SYNC=postgresql://annotateanu:annotateanu_dev@postgres:5432/annotateanu
 
 # Redis
 REDIS_URL=redis://redis:6379/0
@@ -15,6 +16,18 @@ CORS_ORIGINS=["*"]
 # Logging
 LOG_LEVEL=INFO
 
-# Security
+# JWT Authentication
+JWT_SECRET_KEY=dev-secret-key-change-in-production-please
+JWT_ALGORITHM=HS256
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
+JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
+
+# Password hashing
+BCRYPT_ROUNDS=12
+
+# Security (legacy)
 SECRET_KEY=change-me-in-production
 ENCRYPTION_KEY=change-me-in-production-32-chars
+
+# External services
+SAM3_API_URL=http://backend:8000
