--- a/apps/api-core/pyproject.toml
+++ b/apps/api-core/pyproject.toml
@@ -7,14 +7,18 @@ dependencies = [
     "fastapi>=0.123.0",
     "uvicorn[standard]>=0.38.0",
     "sqlalchemy>=2.0.44",
-    "aiosqlite>=0.21.0",
+    "asyncpg>=0.30.0",
+    "psycopg2-binary>=2.9.10",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "email-validator>=2.1.0",
     "httpx>=0.28.1",
     "redis>=7.1.0",
     "cryptography>=46.0.3",
     "python-multipart>=0.0.20",
     "alembic>=1.17.2",
+    "python-jose[cryptography]>=3.3.0",
+    "passlib[bcrypt]>=1.7.4",
 ]
 
 [build-system]
