--- a/apps/api-core/src/alembic.ini
+++ b/apps/api-core/src/alembic.ini
@@ -56,7 +56,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///data/byom.db
+sqlalchemy.url = postgresql://annotateanu:annotateanu_dev@localhost:5432/annotateanu
 
 
 [post_write_hooks]
