feat: Add data management system with shared image registry, tagging, and file explorer UI
  Implement centralized data management infrastructure for organizing and sharing images across projects:

  Backend (API Core):
  - Add database models for shared_images, tags, shared_image_tags, and project_images
  - Implement repositories for data access layer (SharedImage, Tag, ProjectImage)
  - Create API endpoints for file sharing, image management, and tagging
  - Add filesystem service with thumbnail generation (Pillow integration)
  - Include database migration for new data management tables
  - Configure file sharing settings (upload limits, allowed extensions, thumbnail cache)

  Frontend (Web):
  - Build file explorer feature with tree view, breadcrumb navigation, and multi-select
  - Implement drag-and-drop upload with queue management and progress tracking
  - Add Zustand store for file selection state management
  - Create FileSharePage with filtering and tag-based organization
  - Integrate file explorer into project workflow (CreateTaskWizard, ProjectExploreTab)
  - Add data-management API client for backend integration

  Infrastructure:
  - Update docker-compose configuration for file storage volumes
  - Add documentation for data management feature and updated database schema

  This enables teams to maintain a centralized image library with tagging, organize project-specific image pools, and streamline the annotation workflow with reusable datasets.

--- a/apps/api-core/pyproject.toml
+++ b/apps/api-core/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "alembic>=1.17.2",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
+    "aiofiles>=24.1.0",
+    "pillow>=10.0.0",
 ]
 
 [build-system]
