--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,21 +11,26 @@
     "clean": "rm -rf dist node_modules .vite"
   },
   "dependencies": {
-    "@mdxeditor/editor": "^3.52.0",
-    "@tailwindcss/postcss": "^4.1.17",
+    "@mdxeditor/editor": "^3.52.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-virtual": "^3.13.13",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.25",
+    "framer-motion": "^12.23.26",
+    "immer": "^11.0.1",
     "jszip": "^3.10.1",
     "konva": "^10.0.12",
-    "lucide-react": "^0.555.0",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "lucide-react": "^0.561.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
     "react-konva": "^19.2.1",
     "react-router-dom": "^6.30.2",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -33,17 +38,17 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^5.1.1",
+    "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
-    "react-grab": "^0.0.72",
-    "tailwindcss": "^4.1.17",
+    "react-grab": "^0.0.87",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.48.1",
+    "typescript-eslint": "^8.49.0",
     "vite": "^7.2.6"
   }
 }
