--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,18 +12,21 @@
   },
   "dependencies": {
     "@mdxeditor/editor": "^3.52.1",
+    "@pixi/react": "^7.1.2",
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-virtual": "^3.13.13",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "earcut": "^2.2.4",
     "framer-motion": "^12.23.26",
     "immer": "^11.0.1",
     "jszip": "^3.10.1",
     "konva": "^10.0.12",
     "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.561.0",
+    "pixi.js": "^8.14.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-dropzone": "^14.3.8",
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@types/earcut": "^2.1.4",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
