--- a/apps/api-core/.env
+++ b/apps/api-core/.env
@@ -10,8 +10,12 @@ DATABASE_URL_SYNC=postgresql://annotateanu:annotateanu_dev@postgres:5432/annotat
 # Redis
 REDIS_URL=redis://redis:6379/0
 
+# Celery
+CELERY_BROKER_URL=redis://redis:6379/1
+CELERY_RESULT_BACKEND=redis://redis:6379/1
+
 # CORS
-CORS_ORIGINS=["*"]
+CORS_ORIGINS=["http://localhost:5173", "http://localhost:3000", "http://10.8.0.106:5173", "http://10.8.0.106:3000"]
 
 # Logging
 LOG_LEVEL=INFO
