--- a/apps/api-core/pyproject.toml
+++ b/apps/api-core/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "email-validator>=2.1.0",
     "httpx>=0.28.1",
-    "redis>=7.1.0",
+    "redis>=5.0.0,<6.5",
+    "celery>=5.4.0",
     "cryptography>=46.0.3",
     "python-multipart>=0.0.20",
     "alembic>=1.17.2",
