--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,9 @@
     "@pixi/react": "^7.1.2",
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-router": "^1.144.0",
     "@tanstack/react-virtual": "^3.13.13",
+    "@tanstack/router-devtools": "^1.144.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -32,8 +34,8 @@
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
     "react-konva": "^19.2.1",
-    "react-router-dom": "^6.30.2",
     "tailwind-merge": "^3.4.0",
+    "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
