--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,7 +18,6 @@
     "@tanstack/react-router": "^1.144.0",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.13",
-    "@tanstack/router-devtools": "^1.144.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,6 +28,7 @@
     "konva": "^10.0.12",
     "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.561.0",
+    "pixi-viewport": "^6.0.3",
     "pixi.js": "^8.14.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -40,6 +40,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.144.0",
     "@eslint/js": "^9.39.2",
     "@types/earcut": "^2.1.4",
     "@types/node": "^25.0.3",
