--- a/apps/web/tsconfig.base.json
+++ b/apps/web/tsconfig.base.json
@@ -7,8 +7,8 @@
     "moduleResolution": "bundler",
     "skipLibCheck": true,
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
