--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,13 +35,14 @@
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0",
     "react-konva": "^19.2.1",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@tanstack/router-devtools": "^1.144.0",
     "@eslint/js": "^9.39.2",
+    "@tanstack/router-devtools": "^1.144.0",
     "@types/earcut": "^2.1.4",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
