--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@mermaid-js/mermaid-cli": "^11.12.0",
     "@tanstack/router-devtools": "^1.144.0",
     "@types/earcut": "^2.1.4",
     "@types/node": "^25.0.3",
