feat(analytics): add quality metrics and consolidated panels
- Add image-quality metrics storage, service, and compute endpoint with a migration and new dependencies.
- Expand analytics with dimension insights, object-count coverage, and grid heatmap density for consolidated responses.
- Update web analytics panels, hooks, histogram chart, and client types; document the quality-metrics workflow.

--- a/apps/api-core/pyproject.toml
+++ b/apps/api-core/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "passlib[bcrypt]>=1.7.4",
     "aiofiles>=24.1.0",
     "pillow>=10.0.0",
+    "opencv-python-headless>=4.8.0",
+    "imagehash>=4.3.0",
+    "numpy>=1.26.0",
 ]
 
 [build-system]
