--- a/apps/api-core/pyproject.toml
+++ b/apps/api-core/pyproject.toml
@@ -39,7 +39,14 @@ dev-dependencies = [
     "pytest>=8.3.0",
     "pytest-asyncio>=0.24.0",
     "ruff>=0.7.0",
+    "testcontainers[postgres]>=4.9.0",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["src/tests"]
+python_files = ["test_*.py"]
+python_functions = ["test_*"]
+asyncio_mode = "auto"
 
 [tool.ruff]
 line-length = 100
